Updating the js functions to improve the front of the woocommerce field. Integrating the woocommerce field with the buddyform hook. Cleaning the code

--- a/assets/css/buddyforms-woocommerce.css
+++ b/assets/css/buddyforms-woocommerce.css
@@ -40,8 +40,8 @@ h2.hndle {
 	display: inline-block;
 }
 
-h2.hndle.bf_woo {
-	display: none;
+span.type_box.hidden {
+	display: none !important;
 }
 
 
