Implementing tabs to hide and set values to advanced, attributes and variations. Adding a div to hide the process. Improving the scripts to auto select the first available tabs dynamically. Fixing some bug in the shipping tab and the linked product tab.

--- a/assets/css/buddyforms-woocommerce.css
+++ b/assets/css/buddyforms-woocommerce.css
@@ -44,4 +44,17 @@ span.type_box.hidden {
 	display: none !important;
 }
 
+.purchase_notes_class {
+	width: 100% !important;
+}
+
+.woo_general_loader {
+	text-align: center;
+	height: 80%;
+	width: 100%;
+	position: absolute;
+	background-color: #fff;
+	z-index: 99999;
+	margin-top: 43px;
+}
 
