--- a/assets/css/buddyforms-woocommerce.css
+++ b/assets/css/buddyforms-woocommerce.css
@@ -7,54 +7,62 @@
  * @license GPLv2 or later
  */
 .woo_elem_container {
-	width: 100%;
-	float: left;
+    width: 100%;
+    float: left;
 }
 
 .postbox {
-	position: relative;
-	min-width: 255px;
-	border: 1px solid #e5e5e5;
-	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-	background: #fff;
-	margin-bottom: 20px;
-	padding: 0;
-	line-height: 1;
+    position: relative;
+    min-width: 255px;
+    border: 1px solid #e5e5e5;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+    background: #fff;
+    margin-bottom: 20px;
+    padding: 0;
+    line-height: 1;
 }
 
 .postbox .hndle, .stuffbox .hndle {
-	border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #eee;
 }
 
 h2.hndle {
-	font-weight: 600;
-	color: #23282d;
-	font-size: 14px;
-	padding: 8px 12px;
-	margin: 0;
-	line-height: 1.4;
+    font-weight: 600;
+    color: #23282d;
+    font-size: 14px;
+    padding: 8px 12px;
+    margin: 0;
+    line-height: 1.4;
 }
 
 #woocommerce-product-data .hndle label {
-	display: inline-block;
+    display: inline-block;
 }
 
 span.type_box.hidden {
-	display: none !important;
+    display: none !important;
 }
 
 .purchase_notes_class {
-	width: 100% !important;
+    width: 100% !important;
 }
 
 .woo_general_loader {
-	text-align: center;
-	height: 80%;
-	width: 100%;
-	position: absolute;
-	background-color: #fff;
-	z-index: 99999;
-	margin-top: 43px;
+    text-align: center;
+    height: 80%;
+    width: 100%;
+    position: absolute;
+    background-color: #fff;
+    z-index: 99999;
+    margin-top: 43px;
 }
 
+ul.product_images, ul.product_images ul.actions{
+    list-style: none;
+}
+
+#woocommerce-product-images .inside .add_product_images {
+    padding: 12px 12px 12px;
+    margin: 0;
+}
