--- a/assets/css/buddyforms-woocommerce.css
+++ b/assets/css/buddyforms-woocommerce.css
@@ -10,6 +10,10 @@
     width: 100%;
     float: left;
 }
+.error{
+    font-weight: bold;
+    color: #ff3111;
+}
 
 .postbox {
     position: relative;
